--- a/restaurant.html
+++ b/restaurant.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -19,6 +20,7 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
+    <nav role="navigation" aria-label="Breadcrumb">
     <ul id="breadcrumb" >
       <li><a href="/">Home</a></li>
     </ul>
